# aula_18_aovivo

./: README.md  exemplo_00.py  pyproject.toml
